[rootfs] support Name[zh_CN] && Name[en]

--- a/rootfs/usr/share/applications/smart-album.desktop
+++ b/rootfs/usr/share/applications/smart-album.desktop
@@ -3,6 +3,8 @@ Type=Application
 #Encoding=UTF-8
 Version=@VERSION_NUMBER
 Name=smart-album
+Name[en]=smart-album
+Name[zh_CN]=智慧相册
 Exec=/usr/bin/bianbu-smart-album @BACKEND
 Terminal=true
 Icon=/usr/share/icons/bianbu-smart-album/smart-album.png
