[debian] support to build source as multi-packages directly

--- a/debian/rules
+++ b/debian/rules
@@ -7,12 +7,19 @@
 
 install:
 	dh $@
-	# copy resources
-	cp -rf $(CURDIR)/etc $(CURDIR)/debian/bianbu-smart-album-@BACKEND/
-	cp -rf $(CURDIR)/usr $(CURDIR)/debian/bianbu-smart-album-@BACKEND/
+	# post-process
+	rm -rf $(CURDIR)/debian/bianbu-smart-album-fake/usr/src/bianbu-smart-album-fake/backend/tiorb
+	@for bk in fake tiorb; do \
+		PKG_DATA=$(CURDIR)/debian/bianbu-smart-album-$${bk}/usr/share; \
+		sed -i "s/@VERSION_NUMBER/$(shell cat VERSION_NUMBER)/g" $${PKG_DATA}/*/*.json $${PKG_DATA}/*/*.desktop; \
+		sed -i "s/@BACKEND/$${bk}/g" $${PKG_DATA}/*/*.json $${PKG_DATA}/*/*.desktop; \
+	done
 
 %:
 	dh $@
 
 override_dh_shlibdeps:
 	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info
+
+override_dh_missing:
+	dh_missing --fail-missing
